# ArgusCore

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PreLoad.cmake  README.md  ROADMAP.md  appveyor.yml  revision_data.h.in.cmake
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  db_bug_report.yml  feature_request.yml
.github/workflows/: build-linux.yml  build-windows.yml
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: AutoCollect.cmake  CheckBuildDir.cmake  ConfigureBaseTargets.cmake  ConfigureScripts.cmake  CopyRuntimeDependencies.cmake  FindMySQL.cmake  FindPCHSupport.cmake  FindReadline.cmake  GroupSources.cmake
cmake/platform/unix/: settings.cmake
contrib/protoc-bnet/: config.h  service_options.pb.h
dep/: CMakeLists.txt
dep/SFMT/: CMakeLists.txt
dep/argon2/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/fmt/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt  stdsoap2.cpp
dep/jemalloc/: CMakeLists.txt
dep/mysql/: CMakeLists.txt
dep/openssl/: CMakeLists.txt
dep/protobuf/: CMakeLists.txt
dep/rapidjson/: CMakeLists.txt
dep/readline/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/short_alloc/: CMakeLists.txt
dep/threads/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt
dep/valgrind/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
modules/: CMakeLists.txt
modules/cmake/: AddModule.cmake
sql/base/: auth_database.sql  characters_database.sql
sql/create/: create_mysql.sql  drop_mysql.sql  drop_mysql_8.sql
sql/tlpp/world/: 2025_05_11_06_world_tlpp.sql  2025_05_21_00_world_tlpp.sql  2025_05_26_00_world_tlpp.sql  2025_06_08_00_world_tlpp.sql  2025_06_10_01_world_tlpp.sql  2025_06_11_01_world_tlpp.sql  2025_06_25_00_world_tlpp.sql
sql/updates/auth/master/: 2024_08_30_00_auth.sql  2026_05_24_01_auth.sql
sql/updates/characters/master/: 2026_05_20_00_characters.sql  2026_05_24_01_characters.sql
sql/updates/hotfixes/master/: 2025_05_11_00_hotfixes.sql  2026_05_23_00_hotfixes.sql
sql/updates/world/master/: 2025_05_11_02_world.sql  2025_05_16_00_world.sql  2025_05_26_01_world.sql  2025_05_27_00_world.sql  2025_05_27_01_world.sql  2025_05_27_06_world.sql  2025_05_28_01_world.sql  2025_05_30_00_world.sql  2025_05_30_01_world.sql  2025_05_30_03_world.sql  2025_06_04_00_world.sql  2025_06_04_01_world.sql  2025_06_05_01_world.sql  2025_06_06_01_world.sql  2025_06_06_04_world.sql  2025_06_09_02_world.sql  2025_06_10_02_world.sql  2025_06_10_03_world.sql  2025_06_10_04_world.sql  2025_06_11_00_world.sql  2025_06_11_02_world.sql  2025_06_11_03_world.sql  2025_06_11_04_world.sql  2025_06_14_01_world.sql  2025_06_15_00_world.sql  2025_06_15_01_world.sql  2025_06_15_02_world.sql  2025_06_15_07_world.sql  2025_06_15_08_world.sql  2025_06_15_10_world.sql  2025_06_15_11_world.sql  2025_06_16_01_world.sql  2025_06_18_00_world.sql  2025_06_19_00_world.sql  2025_06_21_00_world.sql  2025_06_22_00_world.sql  2025_06_23_00_world.sql  2025_06_26_00_world.sql  2025_06_28_01_world.sql  2025_06_28_02_world.sql  (+31 more)
src/: CMakeLists.txt
src/common/: Banner.cpp  Banner.h  CMakeLists.txt  Common.h  Define.h  GitRevision.cpp
src/common/Asio/: AsioHacksFwd.h  ExpectedCompletionHandler.h
src/common/Collision/: BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  DynamicTree.cpp  ExtractorsVersion.h  RegularGrid.h  VMapDefinitions.h
src/common/Collision/Management/: MMapManager.cpp  MMapManager.h  VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: MMapDefines.h  MapDefines.cpp  MapTree.h
src/common/Collision/Models/: GameObjectModel.cpp
src/common/Cryptography/: AES.cpp  AES.h  CryptoHash.h  HMAC.h  LegacyRSA.cpp  LegacyRSA.h  OpenSSLCrypto.cpp  RSA.cpp  TOTP.cpp
src/common/Cryptography/Authentication/: WorldPacketCrypt.cpp  WorldPacketCrypt.h
src/common/DataStores/: DB2FileLoader.cpp  DB2FileLoader.h  DB2FileSystemSource.cpp  DB2Meta.cpp  DB2Meta.h
src/common/Debugging/Windows/: WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/common/Logging/: Appender.cpp  Log.cpp  Log.h
src/common/Platform/Windows/: ServiceWin32.cpp
src/common/Utilities/: Duration.h  EventMap.h  MessageBuffer.h  Random.h  TaskScheduler.h  Util.h
src/common/network/: CMakeLists.txt  NetworkThread.h  Socket.h
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/bnetserver/: CMakeLists.txt  bnetserver.conf.dist  bnetserver.rc
src/server/bnetserver/REST/: LoginRESTService.cpp
src/server/bnetserver/Server/: Session.cpp  Session.h  SessionManager.h  SslContext.cpp
src/server/bnetserver/Services/: AccountService.h  AuthenticationService.h  ConnectionService.h  GameUtilitiesService.h  ServiceDispatcher.cpp  ServiceDispatcher.h
src/server/database/: CMakeLists.txt
src/server/database/Database/: DatabaseWorkerPool.h  MySQLConnection.cpp  MySQLConnection.h
src/server/game/: CMakeLists.txt
src/server/proto/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp.in.cmake
src/server/shared/: CMakeLists.txt
src/server/worldserver/: CMakeLists.txt  Main.cpp  worldserver.conf.dist  worldserver.rc
src/server/worldserver/CommandLine/: CliRunnable.cpp
src/server/worldserver/RemoteAccess/: RASession.cpp
src/tools/: CMakeLists.txt
src/tools/connection_patcher/: CMakeLists.txt  Program.cpp
src/tools/extractor_common/: CMakeLists.txt  CascHandles.cpp  CascHandles.h  DB2CascFileSource.cpp  DB2CascFileSource.h  ExtractorDB2LoadInfo.h
src/tools/map_extractor/: CMakeLists.txt  System.cpp
src/tools/mmaps_generator/: CMakeLists.txt  MapBuilder.cpp  MapBuilder.h  TerrainBuilder.h
src/tools/vmap4_assembler/: CMakeLists.txt  TileAssembler.h
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  gameobject_extract.cpp  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wmo.cpp  wmo.h
tests/: CMakeLists.txt
(+1087 files in other folders)
