# This file is part of the ArgusCore Project. See AUTHORS file for Copyright information
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# Make add_argus_module() available to every module subdirectory.
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(AddModule)

# -----------------------------------------------------------------------
# Auto-discover modules
# Any subdirectory named mod-* that contains a CMakeLists.txt is a module.
# To create a module: mkdir modules/mod-myfeature, add CMakeLists.txt there,
# call add_argus_module(NAME "MyFeature"), write your scripts.
# -----------------------------------------------------------------------
file(GLOB _mod_dirs LIST_DIRECTORIES true CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/mod-*")

foreach(_mod_dir IN LISTS _mod_dirs)
    if(IS_DIRECTORY "${_mod_dir}" AND EXISTS "${_mod_dir}/CMakeLists.txt")
        get_filename_component(_mod_name "${_mod_dir}" NAME)
        message(STATUS "ArgusCore: Loading module ${_mod_name}")
        add_subdirectory("${_mod_dir}")
    endif()
endforeach()

# -----------------------------------------------------------------------
# Generate modules_loader.cpp
# Defines AddModuleScripts() which calls each module's script entry point.
# This file is always generated — with zero modules it produces an empty
# function so the build is never broken by a missing symbol.
# -----------------------------------------------------------------------
get_property(_mod_names GLOBAL PROPERTY ARGUS_MODULE_NAMES)

set(_gen_dir "${CMAKE_BINARY_DIR}/gen")
file(MAKE_DIRECTORY "${_gen_dir}")

set(_src "// Auto-generated by CMake. Do not edit.\n\n")
foreach(_name IN LISTS _mod_names)
    string(APPEND _src "void Add${_name}Scripts();\n")
endforeach()
string(APPEND _src "\nvoid AddModuleScripts()\n{\n")
foreach(_name IN LISTS _mod_names)
    string(APPEND _src "    Add${_name}Scripts();\n")
endforeach()
string(APPEND _src "}\n")

file(WRITE "${_gen_dir}/modules_loader.cpp" "${_src}")

add_library(modules-loader STATIC "${_gen_dir}/modules_loader.cpp")
target_link_libraries(modules-loader PRIVATE trinity-core-interface)
