# This file is part of the ArgusCore Project. See AUTHORS file for Copyright information
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# Make add_argus_module() available to every module subdirectory.
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(AddModule)

# -----------------------------------------------------------------------
# Auto-discover modules
# Any subdirectory named mod-* that contains a CMakeLists.txt is a module.
# To create a module: mkdir modules/mod-myfeature, add CMakeLists.txt there,
# call add_argus_module(NAME "MyFeature"), write your scripts.
# -----------------------------------------------------------------------
file(GLOB _mod_dirs LIST_DIRECTORIES true CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/mod-*")

foreach(_mod_dir IN LISTS _mod_dirs)
    if(IS_DIRECTORY "${_mod_dir}" AND EXISTS "${_mod_dir}/CMakeLists.txt")
        get_filename_component(_mod_name "${_mod_dir}" NAME)
        message(STATUS "ArgusCore: Loading module ${_mod_name}")
        add_subdirectory("${_mod_dir}")
    endif()
endforeach()

# -----------------------------------------------------------------------
# External modules
# Point cmake at standalone module repos that live outside this tree:
#   cmake -DARGUS_EXTRA_MODULE_DIRS="C:/path/mod-a;C:/path/mod-b" ...
# Each directory must contain a CMakeLists.txt that calls add_argus_module().
# -----------------------------------------------------------------------
set(ARGUS_EXTRA_MODULE_DIRS "" CACHE STRING
    "Semicolon-separated list of external module directories to include in the build.")

if(ARGUS_EXTRA_MODULE_DIRS)
    foreach(_ext_dir IN LISTS ARGUS_EXTRA_MODULE_DIRS)
        if(IS_DIRECTORY "${_ext_dir}" AND EXISTS "${_ext_dir}/CMakeLists.txt")
            get_filename_component(_ext_name "${_ext_dir}" NAME)
            message(STATUS "ArgusCore: Loading external module ${_ext_name} from ${_ext_dir}")
            add_subdirectory("${_ext_dir}" "${CMAKE_CURRENT_BINARY_DIR}/${_ext_name}")
        else()
            message(WARNING "ArgusCore: External module not found or missing CMakeLists.txt: ${_ext_dir}")
        endif()
    endforeach()
endif()

# -----------------------------------------------------------------------
# Generate modules_loader.cpp
# Defines AddModuleScripts() which calls each module's script entry point.
# This file is always generated — with zero modules it produces an empty
# function so the build is never broken by a missing symbol.
# -----------------------------------------------------------------------
get_property(_mod_names GLOBAL PROPERTY ARGUS_MODULE_NAMES)

set(_gen_dir "${CMAKE_BINARY_DIR}/gen")
file(MAKE_DIRECTORY "${_gen_dir}")

set(_src "// Auto-generated by CMake. Do not edit.\n\n")
foreach(_name IN LISTS _mod_names)
    string(APPEND _src "void Add${_name}Scripts();\n")
endforeach()
string(APPEND _src "\nvoid AddModuleScripts()\n{\n")
foreach(_name IN LISTS _mod_names)
    string(APPEND _src "    Add${_name}Scripts();\n")
endforeach()
string(APPEND _src "}\n")

file(WRITE "${_gen_dir}/modules_loader.cpp" "${_src}")

add_library(modules-loader STATIC "${_gen_dir}/modules_loader.cpp")
target_link_libraries(modules-loader PRIVATE trinity-core-interface)
